[gd_scene load_steps=4 format=3 uid="uid://bc8wdto3ta182"]

[ext_resource type="Script" path="res://server.gd" id="1_yusht"]
[ext_resource type="PackedScene" uid="uid://bogi8tfcjyjpq" path="res://wall.tscn" id="2_jcl2g"]

[sub_resource type="LabelSettings" id="LabelSettings_s6ts8"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_yusht")

[node name="Label" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 72.0
offset_top = 55.0
offset_right = 33.0
offset_bottom = 201.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_s6ts8")

[node name="LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 27.0625
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -31.0
offset_right = 24.5
grow_horizontal = 2
grow_vertical = 0
text = "Clear"

[node name="Button2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "play"

[node name="StaticBody2D" parent="." instance=ExtResource("2_jcl2g")]
position = Vector2(207, 560)

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
